2005-01-09  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gtk/gdk.override (_wrap_gdk_pixmap_colormap_create_from_xpm):
	Accept GdkDrawable instead of GdkWindow as first argument. Fixes
	#159282.

2005-01-09  Tim Evans  <gjc@gnome.org>

	* gtk/gtk.defs (gtk_get_current_event): Add (caller-owns-return #t).

	* gtk/gtk.override (_wrap_gtk_get_current_event_state): Impl.

	Reviewed by Gustavo Carneiro.  Fixes #159397.

2005-01-09  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gobject/pygtype.c (pyg_value_from_pyobject): Be consistent about
	not raising an exception on error return.
	Patch by jylefort@brutele.be, fixes #160595.

	* tests/Makefile.am (tests): Add test_subprocess.py.

	* tests/test_subprocess.py: Unit test for gobject.spawn_async and
	gobject.child_watch_add.

	* gobject/gobjectmodule.c (pyg_spawn_async): Add wrapper for
	g_spawn_async_with_pipes.
	(pyg_child_watch_add): Add wrapper for g_child_watch_add_full.

	* gobject/pygobject.h, gobject/pygobject-private.h: Define
	pyg_threads_enabled as PyEval_ThreadsInitialized() on Python 2.4,
	so that it is no longer required to call gobject.threads_init on
	that platform.  Also define pyg_begin|end_allow_threads as
	Py_BEGIN|END_ALLOW_THREADS, since these functions are rarely
	invoked, thus represent a minimal overhead.

	* gobject/gobjectmodule.c (pyg_type_register): Return the type
	being registered, to make gobject.type_register usable as Python
	2.4 @decorator.

	* codegen/codegen.py (Wrapper.write_constructor): Move writing of
	pygobject_no_constuctor to the new methods
	write_default_constructor (when no constructor is declared in the
	.defs) and write_noconstructor (when a constructor is declared but
	could not be generated).
	(GObjectWrapper.write_default_constructor): Override to return
	'0'.  This makes the constructor for GObjects become
	GObject.__init__ by default, unless there is a constructor
	function in the .defs and it could not be generated for some
	reason.
