@@ -1,5 +1,10 @@
 2005-01-09  Gustavo J. A. M. Carneiro  <gjc@gnome.org>
 
+	* gobject/pygtype.c (pyg_value_from_pyobject): Handle conversion
+	of python sequence to G_TYPE_VALUE_ARRAY GValue.
+	(pyg_param_gvalue_from_pyobject): idem.
+	Patch by jylefort@brutele.be; Fixes #160452.
+
 	* gtk/gdk.override (_wrap_gdk_pixmap_colormap_create_from_xpm):
 	Accept GdkDrawable instead of GdkWindow as first argument. Fixes
 	#159282.
